# SimpleFofXVisualizer

./: CMakeLists.txt  CMakeLists.txt.user.0b17e16  InputBar.qml  InputButtons.qml  InputHandler.qml  Main.qml  README.md  Screen01.qml  SettingsMenu.qml  Text_Input.qml  main.cpp
Parserthing/: CMakeLists.txt  exprtk.hpp  parser.cpp  parser.h
Plotterthing/: CMakeLists.txt  PlotterUi.qml  plotter.cpp  plotter.h
